fixed ImageWithContent overflow issue

--- a/src/styles/ImageWithContent.css
+++ b/src/styles/ImageWithContent.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .image-with-content-thumbnail-container {
